@@ -460,7 +460,8 @@ void Chunk_cache::activate_eggs
 	Map_chunk *chunk,	// Chunk this is attached to.
 	int tx, int ty, int tz,		// Tile (absolute).
 	int from_tx, int from_ty,	// Tile walked from.
-	unsigned short eggbits		// Eggs[tile].
+	unsigned short eggbits,		// Eggs[tile].
+	bool now			// Do them immediately.
 	)
 	{
 					// Get ->usecode machine.
@@ -474,7 +475,7 @@ void Chunk_cache::activate_eggs
 		if ((eggbits&1) && i < egg_objects.size() &&
 		    (egg = egg_objects[i]) &&
 		    egg->is_active(obj, tx, ty, tz, from_tx, from_ty))
-			egg->activate(usecode, obj);
+			egg->activate(usecode, obj, now);
 		}
 	if (eggbits)			// Check 15th bit.
 		{			// DON'T use an iterator here, since
@@ -488,7 +489,7 @@ void Chunk_cache::activate_eggs
 			Egg_object *egg = egg_objects[i];
 			if (egg && egg->is_active(obj,
 						tx, ty, tz, from_tx, from_ty))
-				egg->activate(usecode, obj);
+				egg->activate(usecode, obj, now);
 			}
 		}
 	}
