@@ -133,7 +133,7 @@ public:
 					// Saved from ExultStudio.
 	static void update_from_studio(unsigned char *data, int datalen);
 	virtual void activate(Usecode_machine *umachine, Game_object *obj,
-							int must = 0);
+							bool must = 0);
 	void print_debug();
 	static void set_weather(Game_window *gwin, int weather, int len = 15,
 						Game_object *egg = 0);
@@ -193,7 +193,7 @@ public:
 					// Run usecode function.
 	virtual void activate(Usecode_machine *umachine, int event = 1);
 	virtual void activate(Usecode_machine *umachine, Game_object *obj,
-							int must = 0);
+							bool must = false);
 					// Write out to IREG file.
 	virtual void write_ireg(std::ostream& out);
 	};
@@ -212,7 +212,7 @@ public:
 	virtual void activate(Usecode_machine *umachine, int event = 1);
 
 	virtual void activate(Usecode_machine *umachine, Game_object *obj,
-							int must = 0);
+							bool must = false);
 
 					// Can it be activated?
 	virtual int is_active(Game_object *obj,
