@@ -267,7 +267,7 @@ inline void Usecode_script::activate_egg(Usecode_internal *usecode,
 	if (type == Egg_object::monster || type == Egg_object::button ||
 	    type == Egg_object::missile)
 		((Egg_object *) e)->activate(usecode,
-			usecode->gwin->get_main_actor(), 1);
+			usecode->gwin->get_main_actor(), true);
 }
 
 
